--- a/app/src/main/res/layout/content_analysis.xml
+++ b/app/src/main/res/layout/content_analysis.xml
@@ -11,6 +11,7 @@
     tools:showIn="@layout/activity_analysis">
 
     <ScrollView
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
@@ -37,9 +38,37 @@
                     android:layout_marginLeft="@dimen/left10"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
-                    android:text="Top 11 Broker you deal with"
+                    android:text="Top 11 Broker who sells my goods"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
+                    />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_right_black_24dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/top11BrokerLinear1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/left10"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:text="Top 11 Broker from whom I buy"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
                     />
 
                 <ImageView
@@ -57,7 +86,6 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/white"
                 android:orientation="vertical"
-
                 android:weightSum="1">
 
                 <TextView
@@ -65,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/left10"
                     android:layout_marginTop="5dp"
-                    android:text="Fill the option"
+                    android:text="Search Enquiry"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -106,37 +134,49 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:weightSum="2.5"
                         android:orientation="horizontal">
 
-                        <EditText
+                        <TextView
                             android:id="@+id/starDate"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/left10"
-                            android:layout_weight="1"
+                            android:layout_weight="1.1"
                             android:background="@drawable/date_box"
-                            android:onClick="SetDate"
-                            android:padding="@dimen/pdd5"
+                            android:onClick="setStartDate"
+                            android:padding="5dp"
                             android:textColor="@color/dividerColor"
-                            android:textSize="14sp" />
+                            android:drawableLeft="@drawable/calendar1"
+                            android:drawablePadding="10dp"
+                            android:gravity="center_vertical"
+                            android:text="From Date"
+                            android:textSize="14sp"
+                            android:clickable="true"/>
 
                         <View
-                            android:layout_width="40dp"
+                            android:layout_width="0dp"
                             android:layout_height="2dp"
+                            android:layout_weight="0.3"
                             android:layout_gravity="center_vertical"
                             android:background="@color/black_overlay" />
 
-                        <EditText
+                        <TextView
                             android:id="@+id/endDate"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="@dimen/left10"
-                            android:layout_weight="1"
+                            android:layout_weight="1.1"
                             android:background="@drawable/date_box"
-                            android:onClick="SetDate"
-                            android:padding="@dimen/pdd5"
+                            android:onClick="setEndDate"
+                            android:padding="5dp"
                             android:textColor="@color/dividerColor"
-                            android:textSize="14sp" />
+                            android:drawableLeft="@drawable/calendar1"
+                            android:drawablePadding="10dp"
+                            android:gravity="center_vertical"
+                            android:text="To Date"
+                            android:textSize="14sp"
+                            android:clickable="true"/>
 
                     </LinearLayout>
 
@@ -157,24 +197,31 @@
                             android:layout_marginLeft="@dimen/left10"
                             style="@style/spinner_style"
                             android:drawSelectorOnTop="true"
-                             />
-
+                            />
                         <Spinner
                             android:id="@+id/spinner2"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="@dimen/left10"
+                            android:layout_marginTop="10dp"
                             android:layout_marginRight="@dimen/left10"
-                            android:layout_marginTop="15dp"
                             android:textSize="16sp"
+                            android:layout_marginLeft="@dimen/left10"
                             style="@style/spinner_style"
                             android:drawSelectorOnTop="true"
                             />
-
-
-
-
+                        <Spinner
+                            android:id="@+id/spinner3"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="@dimen/left10"
+                            android:textSize="16sp"
+                            android:layout_marginLeft="@dimen/left10"
+                            style="@style/spinner_style"
+                            android:drawSelectorOnTop="true"
+                            />
                     </LinearLayout>
 
 
@@ -186,29 +233,15 @@
                     android:layout_height="40dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_gravity="right"
-                    android:background="@color/dividerColor"
-                    android:id="@+id/button"
+                    android:background="@drawable/app_btn"
+                    android:id="@+id/button_search"
                     android:layout_weight="0.52" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/anlysis_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:paddingBottom="5dp"
-                    android:background="@color/activity_background_color"
-
-                    />
-
-
             </LinearLayout>
-
-
-
-
         </LinearLayout>
 
 
