--- a/app/src/main/res/layout/content_enquiry_details.xml
+++ b/app/src/main/res/layout/content_enquiry_details.xml
@@ -37,8 +37,7 @@
                     android:layout_height="25dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/accept_circle" />
+                    android:layout_marginTop="10dp"/>
 
                 <TextView
                     android:id="@+id/cur_status"
