--- a/app/src/main/res/layout/content_pending_entries.xml
+++ b/app/src/main/res/layout/content_pending_entries.xml
@@ -8,21 +8,26 @@
     tools:context="com.firstidea.android.brokerx.PendingEntriesActivity"
     tools:showIn="@layout/activity_pending_entries">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/pending_recycler_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/activity_background_color"
-        />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/pending_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/activity_background_color" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/empty_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="No Pending Enquiries"
         android:gravity="center"
+        android:text="No Pending Enquiries"
         android:textColor="#7c7c7c"
         android:textSize="23dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </RelativeLayout>
