--- a/app/src/main/res/layout/content_top_brokers.xml
+++ b/app/src/main/res/layout/content_top_brokers.xml
@@ -21,90 +21,121 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/left10"
-                android:layout_marginTop="5dp"
-                android:text="@string/select_date_range"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:ignore="RtlHardcoded" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="vertical">
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:weightSum="1">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:layout_weight="1"
-                        android:text="@string/start_date"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlHardcoded" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
-                        android:layout_marginRight="@dimen/left10"
-                        android:layout_weight="1"
-                        android:text="@string/end_date"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlHardcoded" />
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/left10"
+                    android:layout_marginTop="5dp"
+                    android:text="Search Enquiry"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/starDate"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:layout_weight="1"
+                            android:text="Start Date"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginRight="@dimen/left10"
+                            android:layout_weight="1"
+                            android:text="End Date"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/left10"
-                        android:layout_weight="1"
-                        android:background="@drawable/date_box"
-                        android:inputType=""
-                        android:onClick="SetDate"
-                        android:padding="@dimen/pdd5"
-                        android:textColor="@color/dividerColor"
-                        android:textSize="14sp"
-                        tools:ignore="RtlHardcoded,TextFields" />
+                        android:layout_marginTop="10dp"
+                        android:weightSum="2.5"
+                        android:orientation="horizontal">
 
-                    <View
-                        android:layout_width="40dp"
-                        android:layout_height="2dp"
-                        android:layout_gravity="center_vertical"
-                        android:background="@color/black_overlay" />
+                        <TextView
+                            android:id="@+id/starDate"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/left10"
+                            android:layout_weight="1.1"
+                            android:background="@drawable/date_box"
+                            android:onClick="setStartDate"
+                            android:padding="5dp"
+                            android:textColor="@color/dividerColor"
+                            android:drawableLeft="@drawable/calendar1"
+                            android:drawablePadding="10dp"
+                            android:gravity="center_vertical"
+                            android:text="From Date"
+                            android:textSize="14sp"
+                            android:clickable="true"/>
 
-                    <EditText
-                        android:id="@+id/endDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/left10"
-                        android:layout_weight="1"
-                        android:background="@drawable/date_box"
-                        android:onClick="SetDate"
-                        android:padding="@dimen/pdd5"
-                        android:textColor="@color/dividerColor"
-                        android:textSize="14sp"
-                        tools:ignore="RtlHardcoded,TextFields" />
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="2dp"
+                            android:layout_weight="0.3"
+                            android:layout_gravity="center_vertical"
+                            android:background="@color/black_overlay" />
+
+                        <TextView
+                            android:id="@+id/endDate"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="@dimen/left10"
+                            android:layout_weight="1.1"
+                            android:background="@drawable/date_box"
+                            android:onClick="setEndDate"
+                            android:padding="5dp"
+                            android:textColor="@color/dividerColor"
+                            android:drawableLeft="@drawable/calendar1"
+                            android:drawablePadding="10dp"
+                            android:gravity="center_vertical"
+                            android:text="To Date"
+                            android:textSize="14sp"
+                            android:clickable="true"/>
+
+                    </LinearLayout>
                 </LinearLayout>
+
+                <Button
+                    android:text="Search"
+                    android:layout_width="125dp"
+                    android:layout_height="40dp"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="right"
+                    android:background="@drawable/app_btn"
+                    android:id="@+id/button_search"
+                    android:layout_weight="0.52" />
 
             </LinearLayout>
 
