--- a/app/src/main/res/layout/fragment_broker_home.xml
+++ b/app/src/main/res/layout/fragment_broker_home.xml
@@ -5,23 +5,28 @@
     android:layout_height="match_parent"
     tools:context=".fragment.broker.BrokerHomeFragment">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/activity_background_color"
-        android:elevation="0dp"
-        app:tabIndicatorColor="@color/main_color"
-        app:tabIndicatorHeight="4dp"
-        app:tabPaddingStart="0dp"
-        app:tabPaddingEnd="0dp" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        layout_height="wrap_content"
-        layout_width="wrap_content"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/activity_background_color"
+            android:elevation="0dp"
+            app:tabIndicatorColor="@color/main_color"
+            app:tabIndicatorHeight="4dp"
+            app:tabPaddingEnd="0dp"
+            app:tabPaddingStart="0dp" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tabs" />
-
+        android:layout_below="@+id/tabs">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            layout_height="wrap_content"
+            layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
