--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.firstidea.android.brokerx.ChatListActivity">
+    android:focusableInTouchMode="true"
+    tools:context="com.firstidea.android.brokerx.ChatActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,8 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_chat_list" />
-
-
+    <include layout="@layout/content_chat" />
 
 </android.support.design.widget.CoordinatorLayout>
