--- a/app/src/main/res/layout/content_chat_list.xml
+++ b/app/src/main/res/layout/content_chat_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.firstidea.android.brokerx.Chat.ChatListActivity"
+    tools:context="com.firstidea.android.brokerx.ChatListActivity"
     tools:showIn="@layout/activity_chat_list">
 
 
