--- a/app/src/main/res/layout/card_notification_layout.xml
+++ b/app/src/main/res/layout/card_notification_layout.xml
@@ -3,10 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-
-
-
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_topBroker"
         android:layout_width="match_parent"
@@ -16,7 +12,7 @@
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/notificationLinear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,30 +28,48 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/teal"
                 android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/cardnotification1"
+            <LinearLayout
+                android:id="@+id/layour_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:text="Suresh has rejected your proposal"
-                android:textColor="@color/black"
-                android:textSize="@dimen/txt16sp">
+                android:minHeight="45dp"
+                android:layout_toRightOf="@+id/textCircle2"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/userName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:text="Suresh has rejected your proposal"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/cardnotification1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="Suresh has rejected your proposal"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/txt16sp"/>
+            </LinearLayout>
 
-            </TextView>
+
+
 
             <TextView
                 android:id="@+id/timecard2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
+                android:layout_below="@+id/layour_details"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true"
                 android:text="3 hrs ago"
                 android:textColor="@color/black"
                 android:textSize="@dimen/txtt10sp" />
-        </LinearLayout>
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
