--- a/app/src/main/res/menu/broker_home.xml
+++ b/app/src/main/res/menu/broker_home.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
+    <!--<item
         android:id="@+id/action_chat"
         android:orderInCategory="100"
         android:title="Chat"
         app:showAsAction="always"
-        android:icon="@drawable/ic_menu_chat"/>
+        android:icon="@drawable/ic_menu_chat"/>-->
     <item
         android:id="@+id/action_notification"
         android:orderInCategory="100"
