--- a/app/src/main/res/menu/menu_buyer_seller_home.xml
+++ b/app/src/main/res/menu/menu_buyer_seller_home.xml
@@ -14,11 +14,11 @@
         android:title="Chats"
         app:showAsAction="always">
         <menu>
-            <item
+            <!--<item
                 android:id="@+id/action_chat"
                 android:icon="@drawable/ic_menu_chat"
                 android:orderInCategory="100"
-                android:title="Chats" />
+                android:title="Chats" />-->
             <item
                 android:id="@+id/action_profile"
                 android:icon="@drawable/ic_account_box_black_24dp"
