--- a/app/src/main/res/menu/menu_buyer_seller_home.xml
+++ b/app/src/main/res/menu/menu_buyer_seller_home.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_notification"
         android:icon="@drawable/ic_notifications"
+        app:actionLayout="@layout/notification_badge"
         android:orderInCategory="100"
         android:title="Notifications"
         app:showAsAction="always" />
