--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="main_color">#da3442</color>
     <color name="main_color_lite">#d28087</color>
     <color name="pending_color">#B1CC03</color>
+    <color name="altered_fields_color">#e7de2d</color>
     <!--<color name="teal">#009688</color>-->
 
     <!-- Teal Color
