--- a/app/src/main/res/menu/broker_home.xml
+++ b/app/src/main/res/menu/broker_home.xml
@@ -14,4 +14,10 @@
         android:title="Notifications"
         app:showAsAction="always"
         android:icon="@drawable/ic_notifications"/>
+    <item
+        android:id="@+id/action_chat"
+        android:icon="@drawable/ic_menu_chat"
+        android:orderInCategory="100"
+        android:title="Chats"
+        app:showAsAction="always"/>
 </menu>
