--- a/app/src/main/res/menu/menu_buyer_seller_home.xml
+++ b/app/src/main/res/menu/menu_buyer_seller_home.xml
@@ -8,6 +8,14 @@
         android:orderInCategory="100"
         android:title="Notifications"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_chat"
+        android:icon="@drawable/ic_menu_chat"
+        android:orderInCategory="100"
+        android:title="Chats"
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/action_more"
         android:icon="@drawable/ic_more_vert_white"
@@ -15,11 +23,6 @@
         android:title="Chats"
         app:showAsAction="always">
         <menu>
-            <!--<item
-                android:id="@+id/action_chat"
-                android:icon="@drawable/ic_menu_chat"
-                android:orderInCategory="100"
-                android:title="Chats" />-->
             <item
                 android:id="@+id/action_profile"
                 android:icon="@drawable/ic_account_box_black_24dp"
