--- a/app/src/main/res/layout/content_enquiry_details.xml
+++ b/app/src/main/res/layout/content_enquiry_details.xml
@@ -58,7 +58,7 @@
                     android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:gravity="center_vertical"
-                    android:text="View History"
+                    android:text="View Changes"
                     android:textColor="@color/black"
                     android:textStyle="italic" />
 
