--- a/app/src/main/res/layout/fragment_buyer_seller_enq_item.xml
+++ b/app/src/main/res/layout/fragment_buyer_seller_enq_item.xml
@@ -33,31 +33,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="2"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:weightSum="2">
+
                 <TextView
                     android:id="@+id/createdUserName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginTop="5dp"
+                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="First Idea "
                     android:textColor="@color/textColorSecondary"
                     android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/assignedUserName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginTop="5dp"
+                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="First Idea "
                     android:textColor="@color/textColorSecondary"
                     android:textSize="14sp" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/userName"
                 android:layout_width="match_parent"
@@ -69,26 +72,46 @@
                 android:textColor="@color/textColorSecondary"
                 android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/address"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:drawableLeft="@drawable/ic_location"
-                android:drawablePadding="5dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="First Idea "
-                android:textColor="@color/textColorSecondary"
-                android:textSize="14sp" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/dttm"
+                    android:layout_marginTop="5dp"
+                    android:drawableLeft="@drawable/ic_location"
+                    android:drawablePadding="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="First Idea "
+                    android:textColor="@color/textColorSecondary"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/dttm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="5dp"
+                    android:drawablePadding="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text=""
+                    android:textColor="@color/textColorSecondary"
+                    android:textSize="14sp" />
+
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:paddingRight="10dp"
+                android:background="@drawable/teal_bordered_white_rectangle"
                 android:orientation="horizontal"
-                android:background="@drawable/teal_bordered_white_rectangle">
+                android:paddingRight="10dp">
 
                 <TextView
                     android:id="@+id/brokerage"
@@ -96,10 +119,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:background="@color/teal"
-                    android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:paddingRight="10dp"
                     android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
                     android:text="You Get 40% "
                     android:textColor="@color/white"
                     android:textSize="16sp" />
