--- a/app/src/main/res/menu/menu_buyer_seller_home.xml
+++ b/app/src/main/res/menu/menu_buyer_seller_home.xml
@@ -12,6 +12,7 @@
     <item
         android:id="@+id/action_chat"
         android:icon="@drawable/ic_menu_chat"
+        app:actionLayout="@layout/chat_badge"
         android:orderInCategory="100"
         android:title="Chats"
         app:showAsAction="always"/>
