--- a/app/src/main/res/layout/content_add_enquiry_step_one.xml
+++ b/app/src/main/res/layout/content_add_enquiry_step_one.xml
@@ -163,6 +163,22 @@
                     android:layout_gravity="center_vertical"
                     android:entries="@array/packing"></Spinner>
                 </RelativeLayout>
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/layout_packing_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+
+                    <EditText
+                        android:id="@+id/packing_type"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Packing Type"
+                        android:maxLines="1"
+                        android:paddingLeft="5dp"
+                        android:singleLine="true"/>
+
+                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
